fixed z-index issue with dropkick https://www.pivotaltracker.com/story/show/35489541

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -3774,7 +3774,7 @@ div.hasHalfs{
 
 .dk_open {
     .b-shadow(0 0 1px 1px @themeColor);
-    z-index: 1000;
+    z-index: 10000;
 }
 
 /* The outer container of the options */
